# PlatformCompatibilityTests

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: freebsd.yml  linux.yml  macos.yml  netbsd.yml  openbsd.yml  windows.yml
src/: CMakeLists.txt  HostNameUtilities.cpp  HostNameUtilities.h  Utilities.cpp  Utilities.h  main.cpp
test/: CMakeLists.txt  TestHostNameUtilities.cpp
